--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,5 +13,7 @@
 			<input type="password" name="confirm_password" placeholder="Confirm Password" required>
 			<button>Sign Up</button>
 		</form>
+
+		<a href="/login">Login Page</a>
 	</body>
 </html>
